[tool.poetry]
name = "catlogbeacon"
version = "0.1.0"
description = ""
authors = ["Hi-king <hikingko1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
bleak = "^0.22.3"
ipykernel = "*"
joblib = "*"
scikit-learn = "*"
pandas = "*"
seaborn = "*"
japanize-matplotlib = "*"
setuptools = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
